--- a/predict_image.ipynb
+++ b/predict_image.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,10 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Код из примера, выкачивает картинку и предсказывает классы\n",
+    "\n",
     "Batch = namedtuple('Batch', ['data'])\n",
     "\n",
     "def get_image(url, show=False, local=False):\n",
@@ -64,11 +66,14 @@
     "    img = img[np.newaxis, :]\n",
     "    return img\n",
     "\n",
-    "def predict(url, show=False, local=False):\n",
+    "def predict_old(url, show=False, local=False):\n",
     "    res = []\n",
     "    img = get_image(url, show=show, local=local)\n",
     "    # compute the predict probabilities\n",
+    "    #print(img)\n",
     "    mod.forward(Batch([mx.nd.array(img)]))\n",
+    "    #print('what we give to forward')\n",
+    "    #print([mx.nd.array(img)])\n",
     "    prob = mod.get_outputs()[0].asnumpy()\n",
     "    # print the top-5\n",
     "    prob = np.squeeze(prob)\n",
@@ -80,6 +85,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.96191114, 'n04330267 Stove'],\n",
+       " [0.02427841, 'n04574999 Wheel'],\n",
+       " [0.0050751548, 'n02445004 River otter, Lutra canadensis'],\n",
+       " [0.0027608434, 'n04289027 Sprinkler'],\n",
+       " [0.00096800085, 'n02367492 Chinchilla, Chinchilla laniger']]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_old('https://avatars.mds.yandex.net/get-pdb/906476/9ed1624b-804d-4d26-b9d5-2eac53b4fb03/s800')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -88,8 +119,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -97,7 +130,7 @@
      "text": [
       "Model Inception\n",
       "For dataset pen:\n",
-      "Recognised with 1 priority: 23.0 images with average probability =  0.22384909503971753\n",
+      "Recognised with 1 priority: 23.0 images with average probability =  0.223848933071\n",
       "Recognised with 2 priority: 0.0\n",
       "Recognised with 3 priority: 0.0\n",
       "Recognised with 4 priority: 0.0\n",
@@ -105,7 +138,7 @@
       "('Not recognized: ', 9.0)\n",
       "For dataset key:\n",
       "Recognised with 1 priority: 0.0\n",
-      "Recognised with 2 priority: 17.0 images with average probability =  0.23664229659034924\n",
+      "Recognised with 2 priority: 17.0 images with average probability =  0.236642334282\n",
       "Recognised with 3 priority: 0.0\n",
       "Recognised with 4 priority: 0.0\n",
       "Recognised with 5 priority: 0.0\n",
@@ -113,99 +146,123 @@
       "For dataset phone:\n",
       "Recognised with 1 priority: 0.0\n",
       "Recognised with 2 priority: 0.0\n",
-      "Recognised with 3 priority: 5.0 images with average probability =  0.14087858721613883\n",
+      "Recognised with 3 priority: 5.0 images with average probability =  0.140878477693\n",
       "Recognised with 4 priority: 0.0\n",
       "Recognised with 5 priority: 0.0\n",
       "('Not recognized: ', 27.0)\n",
-      "100.0 images were analyzed in 114.897554874 seconds.\n",
+      "100.0 images were analyzed in 87.9958999157 seconds.\n",
       "\n",
       "Model caffenet\n",
       "For dataset pen:\n",
-      "Recognised with 1 priority: 0.0\n",
+      "Recognised with 1 priority: 26.0 images with average probability =  0.294231741259\n",
       "Recognised with 2 priority: 0.0\n",
       "Recognised with 3 priority: 0.0\n",
       "Recognised with 4 priority: 0.0\n",
       "Recognised with 5 priority: 0.0\n",
-      "('Not recognized: ', 32.0)\n",
+      "('Not recognized: ', 6.0)\n",
       "For dataset key:\n",
       "Recognised with 1 priority: 0.0\n",
-      "Recognised with 2 priority: 6.0 images with average probability =  0.07911471712092559\n",
+      "Recognised with 2 priority: 2.0 images with average probability =  0.300899349153\n",
       "Recognised with 3 priority: 0.0\n",
       "Recognised with 4 priority: 0.0\n",
       "Recognised with 5 priority: 0.0\n",
-      "('Not recognized: ', 30.0)\n",
+      "('Not recognized: ', 34.0)\n",
       "For dataset phone:\n",
       "Recognised with 1 priority: 0.0\n",
       "Recognised with 2 priority: 0.0\n",
-      "Recognised with 3 priority: 3.0 images with average probability =  0.18603069273134074\n",
+      "Recognised with 3 priority: 2.0 images with average probability =  0.136693904176\n",
       "Recognised with 4 priority: 0.0\n",
       "Recognised with 5 priority: 0.0\n",
-      "('Not recognized: ', 29.0)\n",
-      "100.0 images were analyzed in 76.6548819542 seconds.\n",
+      "('Not recognized: ', 30.0)\n",
+      "100.0 images were analyzed in 27.1511120796 seconds.\n",
       "\n",
       "Model nin\n",
       "For dataset pen:\n",
-      "Recognised with 1 priority: 0.0\n",
+      "Recognised with 1 priority: 26.0 images with average probability =  0.554289544171\n",
       "Recognised with 2 priority: 0.0\n",
       "Recognised with 3 priority: 0.0\n",
       "Recognised with 4 priority: 0.0\n",
       "Recognised with 5 priority: 0.0\n",
-      "('Not recognized: ', 32.0)\n",
+      "('Not recognized: ', 6.0)\n",
       "For dataset key:\n",
       "Recognised with 1 priority: 0.0\n",
-      "Recognised with 2 priority: 10.0 images with average probability =  0.3075722306406785\n",
+      "Recognised with 2 priority: 2.0 images with average probability =  0.332086788665\n",
       "Recognised with 3 priority: 0.0\n",
       "Recognised with 4 priority: 0.0\n",
       "Recognised with 5 priority: 0.0\n",
-      "('Not recognized: ', 26.0)\n",
+      "('Not recognized: ', 34.0)\n",
       "For dataset phone:\n",
       "Recognised with 1 priority: 0.0\n",
       "Recognised with 2 priority: 0.0\n",
-      "Recognised with 3 priority: 1.0 images with average probability =  0.5581380128860474\n",
+      "Recognised with 3 priority: 3.0 images with average probability =  0.415588798622\n",
       "Recognised with 4 priority: 0.0\n",
       "Recognised with 5 priority: 0.0\n",
-      "('Not recognized: ', 31.0)\n",
-      "100.0 images were analyzed in 34.993830204 seconds.\n",
+      "('Not recognized: ', 29.0)\n",
+      "100.0 images were analyzed in 31.4512178898 seconds.\n",
       "\n",
       "Model squeezenet_v1.0\n",
       "For dataset pen:\n",
-      "Recognised with 1 priority: 0.0\n",
+      "Recognised with 1 priority: 28.0 images with average probability =  0.392245764179\n",
       "Recognised with 2 priority: 0.0\n",
       "Recognised with 3 priority: 0.0\n",
       "Recognised with 4 priority: 0.0\n",
       "Recognised with 5 priority: 0.0\n",
-      "('Not recognized: ', 32.0)\n",
+      "('Not recognized: ', 4.0)\n",
       "For dataset key:\n",
       "Recognised with 1 priority: 0.0\n",
-      "Recognised with 2 priority: 10.0 images with average probability =  0.19280942712794058\n",
+      "Recognised with 2 priority: 1.0 images with average probability =  0.0211194287986\n",
       "Recognised with 3 priority: 0.0\n",
       "Recognised with 4 priority: 0.0\n",
       "Recognised with 5 priority: 0.0\n",
-      "('Not recognized: ', 26.0)\n",
+      "('Not recognized: ', 35.0)\n",
       "For dataset phone:\n",
       "Recognised with 1 priority: 0.0\n",
       "Recognised with 2 priority: 0.0\n",
-      "Recognised with 3 priority: 2.0 images with average probability =  0.05226106918416917\n",
+      "Recognised with 3 priority: 6.0 images with average probability =  0.16854615168\n",
       "Recognised with 4 priority: 0.0\n",
       "Recognised with 5 priority: 0.0\n",
-      "('Not recognized: ', 30.0)\n",
-      "100.0 images were analyzed in 43.3408958912 seconds.\n",
+      "('Not recognized: ', 26.0)\n",
+      "100.0 images were analyzed in 37.8157260418 seconds.\n",
+      "\n",
+      "Model vgg19\n",
+      "For dataset pen:\n",
+      "Recognised with 1 priority: 31.0 images with average probability =  0.438831811831\n",
+      "Recognised with 2 priority: 0.0\n",
+      "Recognised with 3 priority: 0.0\n",
+      "Recognised with 4 priority: 0.0\n",
+      "Recognised with 5 priority: 0.0\n",
+      "('Not recognized: ', 1.0)\n",
+      "For dataset key:\n",
+      "Recognised with 1 priority: 0.0\n",
+      "Recognised with 2 priority: 1.0 images with average probability =  0.207997962832\n",
+      "Recognised with 3 priority: 0.0\n",
+      "Recognised with 4 priority: 0.0\n",
+      "Recognised with 5 priority: 0.0\n",
+      "('Not recognized: ', 35.0)\n",
+      "For dataset phone:\n",
+      "Recognised with 1 priority: 0.0\n",
+      "Recognised with 2 priority: 0.0\n",
+      "Recognised with 3 priority: 7.0 images with average probability =  0.167351138911\n",
+      "Recognised with 4 priority: 0.0\n",
+      "Recognised with 5 priority: 0.0\n",
+      "('Not recognized: ', 25.0)\n",
+      "100.0 images were analyzed in 362.760195017 seconds.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "models = ['Inception', 'caffenet', 'nin', 'squeezenet_v1.0']\n",
-    "number = [9, 0, 0, 0]\n",
+    "models = ['Inception', 'caffenet', 'nin', 'squeezenet_v1.0', 'vgg19']#, 'vgg16']\n",
+    "\n",
     "for i, name in enumerate(models):\n",
     "    #Initializing model\n",
     "    print('Model ' + name)\n",
-    "    sym, arg_params, aux_params = mx.model.load_checkpoint(name + '/' + name, number[i])\n",
+    "    sym, arg_params, aux_params = mx.model.load_checkpoint(name + '/' + name, 0)\n",
     "    mod = mx.mod.Module(symbol=sym, context=mx.cpu(), label_names=None)\n",
     "    mod.bind(for_training=False, data_shapes=[('data', (1,3,224,224))], \n",
     "             label_shapes=mod._label_shapes)\n",
     "    mod.set_params(arg_params, aux_params, allow_missing=True)\n",
-    "    with open('synset.txt', 'r') as f:\n",
+    "    with open(name + '/synset.txt', 'r') as f:\n",
     "        labels = [l.rstrip() for l in f]\n",
     "    #Predict testing\n",
     "    datasets = ['pen', 'key', 'phone']\n",
@@ -215,7 +272,7 @@
     "        ans = np.zeros(5)\n",
     "        cnt = np.zeros(6)\n",
     "        for filename in glob.iglob('images/' + dataset + '/*'):\n",
-    "            result = predict(filename,  local=True)\n",
+    "            result = predict_old(filename,  local=True)\n",
     "            was = False\n",
     "            for tmp in result:\n",
     "                prob = tmp[0]\n",
@@ -243,10 +300,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import mxnet as mx\n",
+    "import os\n",
+    "import glob\n",
+    "import time\n",
+    "from collections import namedtuple\n",
+    "\n",
+    "class ModelServer:\n",
+    "    #Я считаю, что в config передается пара ('путь к папке с моделью'; число классов, которые надо возвращать)\n",
+    "    #При этом название папки с моделью совпадает с именем модели!!!\n",
+    "    def __init__(self, config):\n",
+    "        #Код далее подгружает модель\n",
+    "        #В папке должны лежать файлы .params и .json с параметрами, а также synset.txt со списком классов\n",
+    "        path = config[0]\n",
+    "        name = os.path.split(path)[1]\n",
+    "        self.sym, self.arg_params, self.aux_params = mx.model.load_checkpoint(path + '/' + name, 0)\n",
+    "        self.mod = mx.mod.Module(symbol=self.sym, context=mx.cpu(), label_names=None)\n",
+    "        self.mod.bind(for_training=False, data_shapes=[('data', (1,3,224,224))], \n",
+    "                 label_shapes=self.mod._label_shapes)\n",
+    "        self.mod.set_params(self.arg_params, self.aux_params, allow_missing=True)\n",
+    "        with open(path + '/synset.txt', 'r') as f:\n",
+    "            self.labels = [l.rstrip() for l in f]\n",
+    "        self.n = config[1]\n",
+    "\n",
+    "    def run_single(self, img):\n",
+    "        #Мы решили, что картинка передается как матрица (ширина, высота, число каналов)\n",
+    "        #Сначала я преобразую ее в нужный формат\n",
+    "        #Картинка может быть любого размера, я преобразую ее в 224х224 (так было в примере кода, я решил оставить)\n",
+    "        img = np.swapaxes(img, 0, 1)\n",
+    "        img = cv2.resize(img, (224, 224))\n",
+    "        img = np.swapaxes(img, 0, 2)\n",
+    "        img = np.swapaxes(img, 1, 2)\n",
+    "        img = img[np.newaxis, :]\n",
+    "        #Здесь нашей модели скрамливаем картинку и смотрим, что она ответит\n",
+    "        Batch = namedtuple('Batch', ['data'])\n",
+    "        self.mod.forward(Batch([mx.nd.array(img)]))\n",
+    "        prob = self.mod.get_outputs()[0].asnumpy()\n",
+    "        prob = np.squeeze(prob)\n",
+    "        #Вернем n классов, к которым мы принадлежим с наибольшей вероятностью\n",
+    "        predictions = np.argsort(prob)[::-1]\n",
+    "        res = []\n",
+    "        for i in predictions[0:self.n]:\n",
+    "            res.append([prob[i], self.labels[i]])\n",
+    "        return res\n",
+    "\n",
+    "    #Здесь принимается массив картинок в таком же формате, как и в run_single\n",
+    "    #Для каждой просто вызывается run_single\n",
+    "    def run_chunk(self, imgs):\n",
+    "        ans = []\n",
+    "        for img in imgs:\n",
+    "            ans.append(self.run_single(img))\n",
+    "        return ans\n",
+    "\n",
+    "    #def run_stream(input_stream<tensor<w,h,c>>, output_stream<label>):\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ttmp = ['Inception', 'caffenet', 'nin', 'squeezenet_v1.0', 'vgg19']\n",
+    "\n",
+    "#model = ModelServer('vgg19')\n",
+    "del model\n",
+    "model = ModelServer(['/home/alladdin/inprak/vgg19', 5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#img = cv2.cvtColor(cv2.imread('images/1434596941_632146314.jpg'), cv2.COLOR_BGR2RGB)\n",
+    "img = cv2.cvtColor(cv2.imread('images/1.jpeg'), cv2.COLOR_BGR2RGB)\n",
+    "img = np.swapaxes(img, 0, 1)\n",
+    "img2 = cv2.cvtColor(cv2.imread('images/123.jpg'), cv2.COLOR_BGR2RGB)\n",
+    "img2 = np.swapaxes(img2, 0, 1)\n",
+    "model.run_chunk(np.array([img, img2]))\n",
+    "del model"
+   ]
   }
  ],
  "metadata": {
@@ -266,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.14"
   },
   "name": ""
  },
